--- a/other.html
+++ b/other.html
@@ -1,6 +1,6 @@
 <!--
 Program header
-Lab 6 - Simple Website - index.html
+Github Deploy - Simple Website - index.html
 Description: 
 Other page, with header and link to Home page
 
